--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,6 +4,8 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -16,8 +18,7 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
