--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.0",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
